--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ scikit_image==0.19.2
 streamlit==1.9.0
 streamlit_authenticator==0.1.4
 streamlit_option_menu==0.3.2
-scikit-learn==1.1.1
+scikit-learn
