--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 numpy==1.21.6
-pandas==1.1.5
+pandas==1.3.5
 Pillow==9.1.1
-Pyrebase4==4.5.0
-scikit_image==0.19.2
-streamlit==1.9.0
-streamlit_authenticator==0.1.4
-streamlit_option_menu==0.3.2
-scikit-learn
+plotly==5.8.2
+scikit_image==0.19.3
+skimage==0.0
+streamlit==1.10.0
+streamlit_aggrid==0.0.4
 streamlit_cropper==0.2.0
+streamlit_option_menu==0.3.2
