--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ numpy==1.21.6
 pandas==1.3.5
 Pillow==9.1.1
 plotly==5.8.2
-scikit_image==0.19.3
-skimage==0.0
+scikit_image
 streamlit==1.10.0
 streamlit_aggrid==0.0.4
 streamlit_cropper==0.2.0
